# STLoR

./: .gitattributes  .gitignore  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
interactives/lessee-pack/: index.html
interactives/scripts/: eslint.config.mjs  package.json  pnpm-lock.yaml
interactives/scripts/src/: store-csv.ts  (+12 more)
interactives/stlor-map/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
interactives/stlors-map/: package.json  pnpm-lock.yaml  tailwind.config.js
public_data/00_Reservation Layer/: BIA-supp.geojson  BIA_AIAN+OK.geojson  BIA_AIAN+OK_Fixed.geojson  BIA_AIAN_National.dbf  BIA_AIAN_National.qmd  BIA_AIAN_National.shp  BIA_AIAN_National.shx  BIA_AIAN_National_FIXED.geojson  BIA_Supplemental.geojson  BIA_Tribal_Statistical_Area.dbf  BIA_Tribal_Statistical_Area.qmd  BIA_Tribal_Statistical_Area.shp  BIA_Tribal_Statistical_Area.shx
public_data/03_States Merged Layers/: Arizona-Merged-02.geojson  Arizona-Merged-02.qmd  California-Merged-03.geojson  Colorado-Merged-LAR.geojson  Idaho-Merged-LAR.geojson  Minnesota-Merged-LAR.geojson  Montana-Merged-LAR.geojson  Nebraska-Merged.geojson  New Mexico-Merged-LAR.geojson  North Dakota-Merged-01.geojson  Oklahoma-Merged.geojson  Oregon-Merged-01.geojson  South Dakota-Merged.geojson  Utah-Merged-LAR.geojson  Washington-Merged-LAR.geojson  Wyoming-Merged-06.dbf  Wyoming-Merged-06.shx
stlor/: activity.py  aggregate.py  clean.py  clip.py  compare.py  config.py  constants.py  entities.py  lessee.py  main.py  overlap.py  supplemental.py  utils.py
(+726 files in other folders)
