[project]
name = "stlor"
version = "0.1.0"
authors = [
  { name = "Clayton Aldern", email = "caldern@grist.org" },
  { name = "Maria Parazo Rose" },
  { name = "Parker Ziegler", email = "peziegler@cs.berkeley.edu" },
]
readme = "README.md"
dependencies = [
  "geopandas",
  "shapely",
  "numpy",
  "tqdm",
  "dask[bag]",
  "ruff",
  "pandas",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stlor"]
