[project]
name = "stlor"
version = "0.1.0"
authors = [
  { name = "Clayton Aldern", email = "caldern@grist.org" },
  { name = "Maria Parazo Rose" },
  { name = "Parker Ziegler", email = "peziegler@cs.berkeley.edu" },
]
readme = "README.md"
dependencies = [
  "geopandas==1.0.1",
  "shapely==2.0.5",
  "numpy==2.0.0",
  "tqdm==4.66.4",
  "dask[bag]==2024.7.0",
  "ruff==0.5.2",
  "pandas==2.2.2",
  "openpyxl==3.1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stlor"]
